force-app/main/default/objects/CnB_Endpoint__c/CnB_Endpoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CnB Endpoint</label>
</CustomObject>