force-app/main/default/objects/CnB_Endpoint__c/fields/BuyerToCnBEndpoint__c.field-meta.xml
<CustomField>
    <fullName>BuyerToCnBEndpoint__c</fullName>
    <label>BuyerToCnBEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>