force-app/main/default/objects/CnB_Endpoint__c/fields/CreateNewLead__c.field-meta.xml
<CustomField>
    <fullName>CreateNewLead__c</fullName>
    <label>CreateNewLead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>