force-app/main/default/objects/CnB_Endpoint__c/fields/LeadStatusChange__c.field-meta.xml
<CustomField>
    <fullName>LeadStatusChange__c</fullName>
    <label>LeadStatusChange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>