force-app/main/default/objects/CnB_Endpoint__c/fields/NewBike_LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>NewBike_LeadStatus__c</fullName>
    <label>NewBike LeadStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>