force-app/main/default/objects/CnB_Endpoint__c/fields/NewBike_NewLead__c.field-meta.xml
<CustomField>
    <fullName>NewBike_NewLead__c</fullName>
    <label>NewBike NewLead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>