force-app/main/default/objects/CnB_Endpoint__c/fields/NewBike_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>NewBike_Recommendation__c</fullName>
    <label>NewBike Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>