force-app/main/default/objects/CnB_Endpoint__c/fields/NewBike_SearchCar__c.field-meta.xml
<CustomField>
    <fullName>NewBike_SearchCar__c</fullName>
    <label>NewBike SearchCar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>