force-app/main/default/objects/CnB_Endpoint__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>