force-app/main/default/objects/CnB_Endpoint__c/fields/Search_Car__c.field-meta.xml
<CustomField>
    <fullName>Search_Car__c</fullName>
    <label>Search Car</label>
    <length>255</length>
    <type>Text</type>
</CustomField>