force-app/main/default/objects/CnB_Endpoint__c/fields/Warranty_Details_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Details_Endpoint__c</fullName>
    <label>Warranty Details Endpoint</label>
    <type>Url</type>
</CustomField>