force-app/main/default/objects/CnB_Endpoint__c/fields/x_app_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_app_api_key__c</fullName>
    <label>x-app-api-key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>